appId: dev.ipf.whitenoise.android.maestrolab
name: presentation-extra-message-history-empty
---
- assertVisible:
    text: Edit history
- tapOn: Back
- assertVisible:
    id: presentation.complete
