appId: dev.ipf.whitenoise.android.maestrolab
name: presentation-extra-message-mention-select
---
- assertVisible:
    text: Maestro Bob
- tapOn: Maestro Bob
- assertVisible:
    id: presentation.complete
