appId: dev.ipf.whitenoise.android.maestrolab
name: presentation-extra-message-summary-select
---
- assertVisible:
    text: Delete for me
- tapOn: Delete for me
- assertVisible:
    id: presentation.complete
