appId: dev.ipf.whitenoise.android.maestrolab
name: presentation-extra-notification-scope-select
---
- assertVisible:
    id: conversation-sound-scope-messages_group
- tapOn:
    id: conversation-sound-scope-messages_group
- assertVisible:
    text: Use global default
- assertVisible:
    text: Custom for this chat
- tapOn: Custom for this chat
- assertVisible:
    id: presentation.complete
