appId: dev.ipf.whitenoise.android.maestrolab
name: presentation-group-large-cancel
---
- assertVisible: Invite to a large group?
- tapOn: Cancel
- assertVisible:
    id: presentation.complete
