appId: dev.ipf.whitenoise.android.maestrolab
name: presentation-group-ui-entity-disabled
---
- assertVisible:
    text: Fixture entities
- assertVisible: Fixture member
- assertVisible:
    enabled: false
    containsChild:
      text: Fixture member
- tapOn:
    enabled: false
    containsChild:
      text: Fixture member
- assertVisible: Fixture entities
- back
- assertVisible:
    id: presentation.complete
