appId: dev.ipf.whitenoise.android.maestrolab
name: presentation-group-ui-entity-select
---
- assertVisible:
    text: Fixture entities
- assertVisible:
    text: Fixture member
- tapOn: Fixture member
- assertVisible:
    id: presentation.complete
