appId: dev.ipf.whitenoise.android.maestrolab
name: presentation-image-avatar
---
- assertVisible: Maestro synthetic avatar
- tapOn: Actions
- assertVisible: Save
- back
- assertVisible: Maestro synthetic avatar
- tapOn: Actions
- assertVisible: Save
- back
- assertVisible: Maestro synthetic avatar
- tapOn: Close
- assertVisible:
    id: presentation.complete
