appId: dev.ipf.whitenoise.android.maestrolab
name: presentation-image-crop-square
---
- assertVisible:
    id: identity_crop.dialog
- assertVisible:
    id: identity_crop.canvas
- tapOn:
    id: identity_crop.confirm
- assertVisible:
    id: presentation.complete
