appId: dev.ipf.whitenoise.android.maestrolab
name: presentation-image-editor-quality
---
- assertVisible: Edit photo
- tapOn:
    id: photo.editor.quality
- assertVisible: Photo quality
- assertVisible: Standard
- back
- tapOn: Close
- assertVisible:
    id: presentation.complete
