appId: dev.ipf.whitenoise.android.maestrolab
name: presentation-nostr-video-retry
---
- assertVisible: Couldn’t play this video\.
- tapOn: Retry
- assertVisible: Couldn’t play this video\.
- tapOn: Close
- assertVisible:
    id: presentation.complete
