appId: dev.ipf.whitenoise.android.maestrolab
name: presentation-preview-edit
---
- assertVisible: Preview
- assertVisible:
    id: conversation.media.preview.image.0
- tapOn: Edit photo
- assertVisible:
    id: presentation.complete
