appId: dev.ipf.whitenoise.android.maestrolab
name: presentation-preview-photos
---
- assertVisible: Preview
- assertVisible:
    id: conversation.media.preview.image.0
- tapOn: Add more
- assertVisible: Photo library
- assertVisible: Document
- back
- assertVisible: Preview
- tapOn: Add more
- assertVisible: Photo library
- assertVisible: Document
- tapOn: Photo library
- assertVisible:
    id: presentation.complete
