appId: dev.ipf.whitenoise.android.maestrolab
name: presentation-preview-view-only
---
- assertVisible: Preview
- assertVisible:
    id: conversation.media.preview.image.0
- assertNotVisible: Send
- tapOn: Cancel Media Changes
- assertVisible:
    id: presentation.complete
