appId: dev.ipf.whitenoise.android.maestrolab
name: presentation-selection-autoread-default
---
- assertVisible: Read messages aloud
- assertVisible: Use default \(On\)
- tapOn: Use default \(On\)
- assertVisible:
    id: presentation.complete
