appId: dev.ipf.whitenoise.android.maestrolab
name: presentation-selection-disband-cancel
---
- assertVisible: Disband this group\?
- tapOn: Cancel
- assertVisible:
    id: presentation.complete
