appId: dev.ipf.whitenoise.android.maestrolab
name: presentation-selection-disband-confirm
---
- assertVisible: Disband this group\?
- tapOn: Disband
- assertVisible:
    id: presentation.complete
