appId: dev.ipf.whitenoise.android.maestrolab
name: presentation-selection-photo-photos
---
- assertVisible: Choose from Photos
- tapOn: Choose from Photos
- assertVisible:
    id: presentation.complete
